--- a/client/src/components/welcome/welcome.component.scss
+++ b/client/src/components/welcome/welcome.component.scss
@@ -17,20 +17,25 @@
         white-space: nowrap;
     }
 
-    .stage {
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: rotate(20deg);
-        color: rgba(255, 255, 255, 0.53);
+    .taglines {
+        margin: 40px 0;
+        color: rgba(255, 255, 255, 0.67);
+    }
 
-        a {
-            font-size: 18px;
+
+    mat-icon {
+        height: 48px;
+        width: 48px;
+        font-size: 48px;
+        opacity: 0.67;
+
+        @media ($mat-xsmall) {
+            display: none;
         }
     }
 
     @media ($mat-xsmall) {
-        height: 520px;
+        height: 450px;
     }
 }
 
@@ -41,14 +46,6 @@
 
     @media ($mat-xsmall) {
         padding: 60px 20px;
-    }
-}
-
-.scroll {
-    opacity: 0.5;
-
-    @media ($mat-xsmall) {
-        display: none;
     }
 }
 
@@ -83,15 +80,19 @@
     }
 }
 
-venzra-registration {
-    width: 480px;
-
-    @media ($mat-xsmall) {
-        width: 95%;
-    }
-}
-
 hr {
     border-top: 2px solid mat-color($venzra-app-primary);
     width: 100%;
+}
+
+.external-links {
+    a {
+        margin-bottom: 10px;
+        color: rgba(0, 0, 0, 0.67);
+        text-decoration: none;
+
+        &:hover {
+            color: mat-color($venzra-app-accent);
+        }
+    }
 }
